[package]
name = "shorty"
version = "0.1.0"
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.3", features = ["json", "uuid"] }
serde = { version = "1.0.118", features = ["derive"] }
chrono = { version = "0.4.19", features = ["serde"] }
url = "2.3.1"
shuttle-runtime = "0.15.0"
shuttle-rocket = "0.15.0"
tokio = "1.28.0"

[dependencies.uuid]
features = ["v4"]
